# collatz

./: Collatz.ipynb  collatz.py  happy.py  narcissistic.py  pyproject.toml
