[tool.poetry]
name = "collatz"
version = "0.1.0"
description = ""
authors = ["Michael Lipschultz <michael.lipschultz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.10.2"
notebook = "^6.5.4"
altair = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
